--- a/src/index.html
+++ b/src/index.html
@@ -147,7 +147,7 @@
         </div>
       </div>
       <div id="right" class="h-full flex justify-center items-end">
-        <img src="../images/1.png" alt="" class="h-full object-fill hidden sm:block ">
+        <img src="../images//1.png" alt="" class="h-full object-fill hidden sm:block ">
       </div>
     </div>
 
