changes of path of images

--- a/src/contact.html
+++ b/src/contact.html
@@ -60,7 +60,7 @@
             <div class="container mx-auto flex justify-between gap-10 items-center">
                 <!-- Logo -->
                 <div>
-                    <img src="../images/nav logo.png" alt="">
+                    <img src="./images/nav logo.png" alt="">
                 </div>
 
                 <!-- Menu -->
@@ -132,7 +132,7 @@
                 </div>
                 <div class="flex flex-col md:flex-row justify-between gap-16 md:gap-8">
                     <div class="flex space-x-8">
-                        <img src="../images/contact_1.png" alt="" class="md:w-[70px] md:h-[70px] w-[60px] h-[60px]" />
+                        <img src="./images/contact_1.png" alt="" class="md:w-[70px] md:h-[70px] w-[60px] h-[60px]" />
                         <div>
                             <h3 class="md:text-[1.8rem] text-[1.5rem] font-semibold mb-2 ">
                                 Address
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                     <div class="flex space-x-8">
-                        <img src="../images/contact_2.png" alt="" class="md:w-[70px] md:h-[70px] w-[60px] h-[60px]" />
+                        <img src="./images/contact_2.png" alt="" class="md:w-[70px] md:h-[70px] w-[60px] h-[60px]" />
                         <div>
                             <h3 class="md:text-[1.8rem] text-[1.5rem] font-semibold mb-2">
                                 Call us
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                     <div class="flex space-x-8">
-                        <img src="../images/contact_3.png" alt="" class="md:w-[70px] md:h-[70px] w-[60px] h-[60px]" />
+                        <img src="./images/contact_3.png" alt="" class="md:w-[70px] md:h-[70px] w-[60px] h-[60px]" />
                         <div>
                             <h3 class="md:text-[1.8rem] text-[1.5rem] font-semibold mb-2">
                                 Email us
@@ -256,7 +256,7 @@
                                 Upload your CV/Resume
                             </p>
                             <div class="flex flex-row items-center">
-                                <img src="../images/upload_icon.png" class="h-4 w-4 " alt="">
+                                <img src="./images/upload_icon.png" class="h-4 w-4 " alt="">
                                 <input type="file"
                                     class="w-full p-3 text-[#808080] font-medium border-b-[1.5px] focus:outline-none focus:border-black cursor-pointer border-[#808080]"
                                     accept="pdf/*" />
@@ -284,7 +284,7 @@
         <!-- third section -->
         <section id="map" class="mt-10">
             <div class="max-w-[1190px] mx-auto px-4 py-10">
-                <img src="../images/map.png" alt="map" class="w-full h-full" />
+                <img src="./images/map.png" alt="map" class="w-full h-full" />
             </div>
         </section>
 
@@ -304,7 +304,7 @@
                             <summary class="flex items-center justify-between cursor-pointer text-lg font-medium">
                                 <h3
                                     class="text-lg/[30px] font-medium mb-2 flex items-center text-start group-open:text-(--color-alternate-02)">
-                                    <img src="../images/acc.png" alt="bullet01" class="w-5 h-5 mr-3" />
+                                    <img src="./images/acc.png" alt="bullet01" class="w-5 h-5 mr-3" />
                                     How to contact with riders emergency?
                                 </h3>
                             </summary>
@@ -323,7 +323,7 @@
                             <summary class="flex items-center justify-between cursor-pointer text-lg font-medium">
                                 <h3
                                     class="text-lg/[30px] font-medium mb-2 flex items-center text-start group-open:text-(--color-alternate-02)">
-                                    <img src="../images/acc.png" alt="bullet01" class="w-5 h-5 mr-3" />
+                                    <img src="./images/acc.png" alt="bullet01" class="w-5 h-5 mr-3" />
                                     App installation failed, how to update system information?
                                 </h3>
                             </summary>
@@ -342,7 +342,7 @@
                             <summary class="flex items-center justify-between cursor-pointer text-lg font-medium">
                                 <h3
                                     class="text-lg/[30px] font-medium mb-2 flex items-center text-start group-open:text-(--color-alternate-02)">
-                                    <img src="../images/acc_2.png" alt="bullet01" class="w-5 h-5 mr-3" />
+                                    <img src="./images/acc_2.png" alt="bullet01" class="w-5 h-5 mr-3" />
                                     Website reponse taking time, how to improve?
                                 </h3>
                             </summary>
@@ -361,7 +361,7 @@
                             <summary class="flex items-center justify-between cursor-pointer text-lg font-medium">
                                 <h3
                                     class="text-lg/[30px] font-medium mb-2 flex items-center text-start group-open:text-(--color-alternate-02)">
-                                    <img src="../images/acc.png" alt="bullet01" class="w-5 h-5 mr-3" />
+                                    <img src="./images/acc.png" alt="bullet01" class="w-5 h-5 mr-3" />
                                     New update fixed all bug and issues
                                 </h3>
                             </summary>
@@ -390,7 +390,7 @@
                 </p>
                 <div class="pt-20 lg:pt-30 flex items-center justify-center relative w-full max-w-[979px]">
                     <div class="relative w-full md:h-[104px] h-[95px] text-2xl outline-none shadow-2xl">
-                        <img src="../images/mail_logo.png" alt="envelop"
+                        <img src="./images/mail_logo.png" alt="envelop"
                             class="hidden md:block w-[24px] h-[24px] absolute left-12 top-1/2 transform -translate-y-1/2" />
                         <input type="email" id="email-subscribe" name="email-subscribe"
                             placeholder="Enter your email address"
@@ -415,7 +415,7 @@
             <div class="container mx-auto grid grid-cols-1 md:grid-cols-4 gap-8 md:px-12 md:py-4">
                 <!-- First Column -->
                 <div>
-                    <img src="../images/foot logo.png"
+                    <img src="./images/foot logo.png"
                         class="md:h-[2.4rem] h-[2rem] lg:w-[13rem] md:w-[12.9rem] w-[10rem]" alt="">
                     <p class="text-[#1F1F1F] font-medium md:text-[1rem] text-[0.9rem] mb-4 mt-6">VivaDecor your premier
                         <br> destination for luxury and <br> modern interior design</p>
