--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
       <div class="container mx-auto flex justify-between gap-10 items-center">
         <!-- Logo -->
         <div>
-          <img src="../images/nav logo.png" alt="">
+          <img src="./images/nav logo.png" alt="">
         </div>
 
         <!-- Menu -->
@@ -147,7 +147,7 @@
         </div>
       </div>
       <div id="right" class="h-full flex justify-center items-end">
-        <img src="../images/1.png" alt="" class="h-full object-fill hidden sm:block ">
+        <img src="./images/1.png" alt="" class="h-full object-fill hidden sm:block ">
       </div>
     </div>
 
@@ -160,20 +160,20 @@
       </div>
       <div class="p-5 flex md:flex-row flex-col gap-14 justify-center items-center">
         <div class="container flex flex-col justify-between items-center">
-          <img src="../images/1st.png" alt="">
-          <img src="../images/1st_n.png" alt="" class="mt-2">
+          <img src="./images/1st.png" alt="">
+          <img src="./images/1st_n.png" alt="" class="mt-2">
         </div>
         <div class="container flex  flex-col justify-between items-center">
-          <img src="../images/2nd.png" alt="">
-          <img src="../images/2nd_n.png" alt="" class="mt-2">
+          <img src="./images/2nd.png" alt="">
+          <img src="./images/2nd_n.png" alt="" class="mt-2">
         </div>
         <div class="container flex  flex-col justify-between items-center">
-          <img src="../images/3rd.png" alt="">
-          <img src="../images/3rd_n.png" alt="" class="mt-2">
+          <img src="./images/3rd.png" alt="">
+          <img src="./images/3rd_n.png" alt="" class="mt-2">
         </div>
         <div class="container flex  flex-col justify-between items-center">
-          <img src="../images/4th.png" alt="">
-          <img src="../images/4th_n.png" alt="" class="mt-2">
+          <img src="./images/4th.png" alt="">
+          <img src="./images/4th_n.png" alt="" class="mt-2">
         </div>
       </div>
     </div>
@@ -193,7 +193,7 @@
             email </br> & digital</p>
         </div>
         <div>
-          <img src="../images/third_sec.png" alt="" class="h-3/2 md:h-auto">
+          <img src="./images/third_sec.png" alt="" class="h-3/2 md:h-auto">
           <p class="text-[#58595D] text-center font-medium md:text-[1rem] text-[0.8rem]">Your messages get read</p>
         </div>
         <div>
@@ -222,7 +222,7 @@
               customers </br> &
               prospects. Target email leads with MailMatch™.</p>
             <div>
-              <img src="../images/div 1.png" alt="">
+              <img src="./images/div 1.png" alt="">
             </div>
           </div>
 
@@ -234,7 +234,7 @@
             <p class="font-medium text-[1rem] text-[#58595D]">Deliver your message to all of your customers — for less
               than the </br> cost of a click.</p>
             <div>
-              <img src="../images/div 2.png" alt="">
+              <img src="./images/div 2.png" alt="">
             </div>
           </div>
 
@@ -245,7 +245,7 @@
             <p class="font-medium text-[1rem] text-[#58595D]">From design & strategy to stamp-licking, our ecom</br>
               experts help you every step of the way.</p>
             <div>
-              <img src="../images/div 3.png" alt="">
+              <img src="./images/div 3.png" alt="">
             </div>
             <button
               class="mt-4 px-5 py-2 rounded-xl border border-b-4 border-r-4 border-black bg-[#FF6D2C] text-white cursor-pointer">TRY
@@ -269,7 +269,7 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         <!-- Card 1 -->
         <div class="bg-[#FDF3EA] shadow-md rounded-lg p-8 flex flex-col justify-center items-center gap-4">
-          <img src="../images/card 1.png" alt="Card Image" class="rounded-md mb-4">
+          <img src="./images/card 1.png" alt="Card Image" class="rounded-md mb-4">
           <h2 class="text-2xl font-bold mb-2 text-[#2E2F35] text-center">Plug-and-play with </br> your stack</h2>
           <p class="text-[#58595D] font-medium text-md text-center md:leading-[1.5rem]">Native integrations provide
             seamless </br> segmentation, automation & tracking. No </br> clunky spreadsheets.</p>
@@ -277,7 +277,7 @@
 
         <!-- Card 2 -->
         <div class="bg-[#E0F8F2] shadow-md rounded-lg p-8 flex flex-col justify-center items-center gap-4">
-          <img src="../images/card 2.png" alt="Card Image" class="rounded-md mb-4">
+          <img src="./images/card 2.png" alt="Card Image" class="rounded-md mb-4">
           <h2 class="text-2xl font-bold mb-2 text-[#2E2F35] text-center">Run campaigns </br> on autopilot</h2>
           <p class="text-[#58595D] font-medium text-md text-center md:leading-[1.5rem]">Ink profits while you sleep:
             Just set it and </br> forget it.</p>
@@ -285,7 +285,7 @@
 
         <!-- Card 3 -->
         <div class="bg-[#EEECFF] shadow-md rounded-lg p-8 flex flex-col justify-center items-center gap-4">
-          <img src="../images/card 3.png" alt="Card Image" class="rounded-md mb-4">
+          <img src="./images/card 3.png" alt="Card Image" class="rounded-md mb-4">
           <h2 class="text-2xl font-bold mb-2 text-[#2E2F35] text-center">Real-time ROI dashboard</h2>
           <p class="text-[#58595D] font-medium text-md text-center md:leading-[1.5rem]">Track performance of every
             postcard by </br> customer or discount code. Your CFO will </br> love it.</p>
@@ -293,7 +293,7 @@
 
         <!-- Card 4 -->
         <div class="bg-[#D9F2F7] shadow-md rounded-lg p-8 flex flex-col justify-center items-center gap-4">
-          <img src="../images/card 4.png" alt="Card Image" class="rounded-md mb-4">
+          <img src="./images/card 4.png" alt="Card Image" class="rounded-md mb-4">
           <h2 class="text-2xl font-bold mb-2 text-[#2E2F35] text-center">Deliver WOW with "real" </br> handwritten cards
           </h2>
           <p class="text-[#58595D] font-medium text-md text-center md:leading-[1.5rem]">Our proprietary robots use real
@@ -302,7 +302,7 @@
 
         <!-- Card 5 -->
         <div class="bg-[#FAEDED] shadow-md rounded-lg p-8 flex flex-col justify-center items-center gap-4">
-          <img src="../images/card 5.png" alt="Card Image" class="rounded-md mb-4">
+          <img src="./images/card 5.png" alt="Card Image" class="rounded-md mb-4">
           <h2 class="text-2xl font-bold mb-2 text-[#2E2F35] text-center">Plug-and-play with your stack</h2>
           <p class="text-[#58595D] font-medium text-md text-center md:leading-[1.5rem]">Native integrations provide
             seamless segmentation, automation & tracking. No clunky spreadsheets.</p>
@@ -310,7 +310,7 @@
 
         <!-- Card 6 -->
         <div class="bg-[#F1F1F1] shadow-md rounded-lg p-8 flex flex-col justify-center items-center gap-4">
-          <img src="../images/card 6.png" alt="Card Image" class="rounded-md mb-4">
+          <img src="./images/card 6.png" alt="Card Image" class="rounded-md mb-4">
           <h2 class="text-2xl font-bold mb-2 text-[#2E2F35] text-center">Complimentary </br> concierge service</h2>
           <p class="text-[#58595D] font-medium text-md text-center md:leading-[1.5rem]">DTC is in our DNA. Our pros will
             build your </br> strategy and custom designs using battle-</br>tested best practices.</p>
@@ -395,7 +395,7 @@
               <div class="flex flex-row justify-between ">
                 <div class="flex items-center gap-4">
                   <!-- Profile Image -->
-                  <img src="../images/user1.png" alt="Profile Picture" class="w-12 h-12 rounded-full">
+                  <img src="./images/user1.png" alt="Profile Picture" class="w-12 h-12 rounded-full">
                   <!-- User Details -->
                   <div>
                     <h4 class="text-lg font-medium text-[#2E2F35]">Helen Guo</h4>
@@ -404,7 +404,7 @@
                 </div>
                 <!-- Tweet Image -->
                 <div class="">
-                  <img src="../images/tweet.png" alt="Tweet Image">
+                  <img src="./images/tweet.png" alt="Tweet Image">
                 </div>
               </div>
               <!-- Tweet Content -->
@@ -423,7 +423,7 @@
               <div class="flex flex-row justify-between ">
                 <div class="flex items-center gap-4">
                   <!-- Profile Image -->
-                  <img src="../images/user2.png" alt="Profile Picture" class="w-12 h-12 rounded-full">
+                  <img src="./images/user2.png" alt="Profile Picture" class="w-12 h-12 rounded-full">
                   <!-- User Details -->
                   <div>
                     <h4 class="text-lg font-medium text-[#2E2F35]">Nathan Woods</h4>
@@ -432,7 +432,7 @@
                 </div>
                 <!-- Tweet Image -->
                 <div class="">
-                  <img src="../images/tweet.png" alt="Tweet Image">
+                  <img src="./images/tweet.png" alt="Tweet Image">
                 </div>
               </div>
               <!-- Tweet Content -->
@@ -461,7 +461,7 @@
     <div id="success" class="container bg-[#EEECFF] p-6">
       <div class="flex flex-col md:flex-row gap-4 md:gap-14 items-center p-6 mx-auto">
         <div class="w-full md:w-1/2 items-start">
-          <img src="../images/eight_img.png" alt="Sample Image" class="w-full h-auto rounded-lg">
+          <img src="./images/eight_img.png" alt="Sample Image" class="w-full h-auto rounded-lg">
         </div>
 
         <!-- Second Div: Content -->
@@ -504,10 +504,10 @@
 
           <!-- Div with 4 logos -->
           <div class="flex md:gap-4 gap-2 mt-4">
-            <img src="../images/logo1.png" alt="Logo 1" class="md:w-fit min-w-12 h-12 rounded-full">
-            <img src="../images/logo2.png" alt="Logo 2" class="md:w-fit min-w-12 h-12 rounded-full">
-            <img src="../images/logo3.png" alt="Logo 3" class="md:w-fit min-w-12 h-12 rounded-full">
-            <img src="../images/logo4.png" alt="Logo 4" class="md:w-fit min-w-12 h-12 rounded-full">
+            <img src="./images/logo1.png" alt="Logo 1" class="md:w-fit min-w-12 h-12 rounded-full">
+            <img src="./images/logo2.png" alt="Logo 2" class="md:w-fit min-w-12 h-12 rounded-full">
+            <img src="./images/logo3.png" alt="Logo 3" class="md:w-fit min-w-12 h-12 rounded-full">
+            <img src="./images/logo4.png" alt="Logo 4" class="md:w-fit min-w-12 h-12 rounded-full">
           </div>
 
         </div>
@@ -552,7 +552,7 @@
 
       <!-- Second Div: Image -->
       <div class="flex-1">
-        <img src="../images/nineth_img.png" alt="Placeholder Image" class="h-auto md:w-auto ">
+        <img src="./images/nineth_img.png" alt="Placeholder Image" class="h-auto md:w-auto ">
       </div>
     </div>
 
@@ -568,21 +568,21 @@
 
         <!-- Card 1 -->
         <div class="flex flex-col items-center w-full md:w-1/3 gap-3">
-          <img src="../images/tenth_one.png" alt="Image 1">
+          <img src="./images/tenth_one.png" alt="Image 1">
           <h2 class="text-[#2E2F35] lg:text-[1.5rem] text-[1rem] font-bold text-start">3 Low-Cost Campaigns <br> You
             Must Run to Win BFCM</h2>
         </div>
 
         <!-- Card 2 -->
         <div class="flex flex-col items-center w-full md:w-1/3 gap-3">
-          <img src="../images/tenth_two.png" alt="Image 2">
+          <img src="./images/tenth_two.png" alt="Image 2">
           <h2 class="text-[#2E2F35] lg:text-[1.5rem] text-[1rem] font-bold text-start">Postcard Marketing: The <br>
             Definitive Guide to High <br> ROI [2022]</h2>
         </div>
 
         <!-- Card 3 -->
         <div class="flex flex-col items-center w-full md:w-1/3 gap-3">
-          <img src="../images/tenth_three.png" alt="Image 3">
+          <img src="./images/tenth_three.png" alt="Image 3">
           <h2 class="text-[#2E2F35] lg:text-[1.5rem] text-[1rem] font-bold text-start">The Ultimate Guide to Thank <br>
             You Notes for Ecommerce</h2>
         </div>
@@ -599,7 +599,7 @@
 
           <!-- 1st Div: Logo & Description -->
           <div>
-            <img src="../images/footer_logo.png" alt="" class="h-12 md:h-[6.5rem]">
+            <img src="./images/footer_logo.png" alt="" class="h-12 md:h-[6.5rem]">
             <p class="text-[#58595D] mt-4 font-medium text-sm md:leading-6 leading-4">Our paper is sourced from
               FSC-certified mills. We plant enough trees to more than double our paper usage.</p>
           </div>
@@ -634,7 +634,7 @@
             <h3 class="font-bold text-sm text-[#2E2F35] uppercase tracking-widest">Contact</h3>
             <ul class="mt-2 space-y-2">
               <li class="flex items-center gap-2">
-                <img src="../images/mail logo.png" class="h-5 w-5" alt="">
+                <img src="./images/mail logo.png" class="h-5 w-5" alt="">
                 <a href="#" class="text-[#2E2F35] underline-animation font-medium text-sm">support@postpilot.com</a>
               </li>
               <li>
@@ -652,7 +652,7 @@
 
           <!-- Left: Logo & Description -->
           <div>
-            <img src="../images/nav logo.png" alt="" class=" h-6">
+            <img src="./images/nav logo.png" alt="" class=" h-6">
             <p class="text-[#58595D] md:text-[0.8rem] text-[0.4rem] font-medium mt-1">© 2022 PostPilot, Inc. All rights
               reserved.</p>
           </div>
