changes in buttons

--- a/src/contact.html
+++ b/src/contact.html
@@ -56,10 +56,10 @@
 <body class="m-0 p-0 box-border font-inter">
     <div class="container flex flex-col mx-auto font-inter scroll-smooth">
         <!-- Navbar -->
-        <nav class="p-5 sticky left-0 top-0 bg-[#fff] font-medium">
+        <nav class="w-full p-6 md:mr-12 sticky left-0 top-0 z-50 bg-[#fff] font-medium">
             <div class="container mx-auto flex justify-between gap-10 items-center">
                 <!-- Logo -->
-                <div>
+                <div class="lg:ml-16 md:ml-18">
                     <img src="./images/nav logo.png" alt="">
                 </div>
 
@@ -68,22 +68,34 @@
                     <div class="flex space-x-4 lg:text-[0.9rem] text-[0.7rem]">
                         <select name="" id="" class="cursor-pointer hover:text-blue-500">
                             <option value="">
-                                <a href="#" class="hover:text-blue-500">Resources</a>
+                                <a href="#" class="">Resources</a>
+                            </option>
+                            <option value="">
+                                <a href="./contact.html" class="">Contact</a>
+                            </option>
+                            <option value="">
+                                <a href="#" class="">Carrers</a>
                             </option>
                         </select>
                         <a href="#" class=" hover:text-blue-500">Success stories</a>
                         <select name="" id="" class="cursor-pointer hover:text-blue-500">
-                            <option value="">
-                                <a href="#" class=" hover:text-blue-500">Company</a>
+                            <option value="" class="underline-animation">
+                                <a href="#" class="underline-animation">Company</a>
+                            </option>
+                            <option value="" class="underline-animation">
+                                <a href="#" class="underline-animation">About</a>
+                            </option>
+                            <option value="" class="underline-animation">
+                                <a href="#" class="underline-animation">Policy</a>
                             </option>
                         </select>
                         <a href="#" class=" hover:text-blue-500">Pricing</a>
                     </div>
                     <div class="flex space-x-4 text-[#2E2F35] md:text-[0.8rem] lg:text-[1rem]">
                         <button
-                            class="lg:px-4 md:px-2 lg:py-2 text-[#2E2F35] border-1 border-black border-b-4 border-r-4 rounded-xl ">Login</button>
+                            class="lg:px-4 md:px-2 lg:py-2 text-[#2E2F35] border-1 border-black border-b-4 border-r-4 rounded-xl cursor-pointer hover:shadow-lg hover:shadow-[#009387] dark:hover:shadow-[#009387] transition duration-300">Login</button>
                         <button
-                            class="lg:px-4 md:px-2 lg:py-2 bg-[#FF6D2C] text-[#ffff] border-1 border-black border-b-4 border-r-4 rounded-xl">Create
+                            class="lg:px-4 md:px-2 lg:py-2 bg-[#FF6D2C] text-[#ffff] border-1 border-black border-b-4 border-r-4 rounded-xl cursor-pointer hover:shadow-lg hover:shadow-[#FF6D2C] dark:hover:shadow-[#FF6D2C] transition duration-300">Create
                             free account</button>
                     </div>
                 </div>
@@ -418,7 +430,8 @@
                     <img src="./images/foot logo.png"
                         class="md:h-[2.4rem] h-[2rem] lg:w-[13rem] md:w-[12.9rem] w-[10rem]" alt="">
                     <p class="text-[#1F1F1F] font-medium md:text-[1rem] text-[0.9rem] mb-4 mt-6">VivaDecor your premier
-                        <br> destination for luxury and <br> modern interior design</p>
+                        <br> destination for luxury and <br> modern interior design
+                    </p>
                     <div class="flex space-x-4">
                         <a href="#"
                             class="text-[#313131] font-medium md:text-[1.5rem] text-[1.3rem] hover:text-[#009387] duration-700"><ion-icon
